--- a/redirection/403.html
+++ b/redirection/403.html
@@ -11,7 +11,7 @@
         <div class="error-code">403</div>
         <div class="error-message">Forbidden - Access Denied</div>
         <p>Sorry, you don't have permission to access this page.</p>
-        <a href="/" class="back-home">Back to Home</a>
+        <a href="index.html" class="back-home">Back to Home</a>
     </div>
 </body>
 </html>
