Realign redirection for git

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class ="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="./">HOME</a></li>
                     <li><a href="redirection/403.html">PROJECT</a></li>
                     <li><a href="redirection/403.html">MENU</a></li>
                     <li><a href="redirection/403.html">ABOUT US</a></li>
