Realign redirection for git

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="./">HOME</a></li>
                     <li><a href="redirection/403.html">PROJECT</a></li>
                     <li><a href="redirection/403.html">MENU</a></li>
-                    <li><a href="redirection/403.html">ABOUT US</a></li>
+                    <li><a href="redirection/gfp.html">ABOUT US</a></li>
                     <li><a href="contactus/contactus.html">CONTACT US</a></li>
                 </ul>
             </div>
