--- a/redirection/gfp.html
+++ b/redirection/gfp.html
@@ -11,7 +11,7 @@
         <div class="error-code">503</div>
         <div class="error-message">Service Unavailable</div>
         <p>We apologize, but our site is currently down for maintenance. Please check back later.</p>
-        <a href="./" class="back-home">Back to Home</a>
+        <a href="./../" class="back-home">Back to Home</a>
     </div>
 </body>
 </html>
