Changes on customer names

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <img src ="user.png">
                 <div>
                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
-                    <h3>Dark Herras</h3>
+                    <h3>Gorgonio Magalpoc</h3>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -106,7 +106,7 @@
                 <img src ="user.png">
                 <div>
                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
-                    <h3>Aljur Abrenigga</h3>
+                    <h3>Junjun Salarzon</h3>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
